--- a/css/index.css
+++ b/css/index.css
@@ -215,12 +215,16 @@ header nav a:hover {
 h2 {
     text-align: center;
     margin-top: 20px;
+    position: relative;
+    top: 5vh;
 }
 
 .skills-container {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+    position: relative;
+    top: 5vh;
 }
 
 .skills-category {
@@ -408,6 +412,8 @@ h2 {
     justify-content: center;
     gap: 20px;
     padding: 20px;
+    position: relative;
+    top: 5vh;
 }
 
 /* Individual research paper */
@@ -432,7 +438,7 @@ h2 {
 }
 
 .heading {
-    font-size: 1.3em; 
+    font-size: 1.5em; 
     font-weight: bold;
 }
 
@@ -469,6 +475,8 @@ h2 {
     font-size: 2em;
     margin-bottom: 20px;
     font-weight: bold;
+    position: relative;
+    top: 0;
 }
 
 .contact-form {
