updated and remove bug of contact section

--- a/css/index.css
+++ b/css/index.css
@@ -535,6 +535,23 @@ h2 {
     color: #50C878;
 }
 
+
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    border: 0;
+}
+.acknowledgement{
+    margin-top: 10px; 
+    color: #50C878; 
+    font-weight: bold;
+}
+
 /* Media Query for screens smaller than 768px */
 @media (max-width: 768px) {
 
