--- a/css/index.css
+++ b/css/index.css
@@ -469,14 +469,11 @@ header nav a:hover {
   transform: translateY(-2px);
 }
 
-.about-title {
-  font-size: 2em;
-  margin-bottom: 3rem;
-  background: linear-gradient(45deg, #50c878, #61dafb);
-  -webkit-background-clip: text;
-  background-clip: text;
-  -webkit-text-fill-color: transparent;
-}
+#about-me h2 {
+  text-align: center;
+  position: relative;
+  top: 5vh;
+} 
 
 /* Tech skills section */
 #tech-skills {
@@ -1326,9 +1323,6 @@ h2 {
     font-size: 0.5em;
   }
 
-  #about-me {
-    align-items: baseline;
-  }
 
   .left-about {
     display: flex;
@@ -1336,10 +1330,7 @@ h2 {
     position: relative;
   }
 
-  .about-me .content-wrapper {
-    display: flex;
-    align-items: center;
-  }
+
 
   .prj-nav {
     display: flex;
@@ -1391,10 +1382,6 @@ h2 {
     padding: 0.4rem 0.8rem;
   }
 
-  .about-title {
-    font-size: 1.8em;
-    margin-bottom: 1.5rem;
-  }
 
   .header-resume-btn {
     display: none; /* Hide resume button on mobile */
@@ -1455,10 +1442,6 @@ h2 {
     line-height: 1.6;
   }
 
-  .about-title {
-    font-size: 1.5em;
-    margin-bottom: 1rem;
-  }
 }
 
 /* Home section styling */
@@ -2100,10 +2083,6 @@ h2 {
     padding: 1.5rem;
   }
 
-  .about-title {
-    font-size: 1.8em;
-    margin-bottom: 1.5rem;
-  }
 
   .about-text {
     font-size: 1em;
@@ -2172,10 +2151,6 @@ h2 {
   .nav-links a {
     font-size: 1em;
     padding: 12px;
-  }
-
-  .about-title {
-    font-size: 1.5em;
   }
 
   .about-text {
